# smit-task-center

./: README.md
Assignment_1_AdmissionForm/: main.py  pyproject.toml
ReadyFligh/: .env  app.py  main.py  pyproject.toml
ReadyFligh/backend/: main.py
ReadyFligh/frontend/: App.js
airline_agentic_app/: App.js  image  main.py  prompt.txt  pyproject.toml
business_agent/: .gitignore  main.py
