[project]
name = "readyfligh"
version = "0.1.0"
description = ""
authors = [
    {name = "Haseeb",email = "ah673277@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "openai-agents (>=0.0.17,<0.0.18)",
    "chainlit (>=2.5.5,<3.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pymongo[srv] (>=4.13.0,<5.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
